final ex 4